--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-aiohttp==0.21.2
+aiohttp==2.2.5
 aiohttp-jinja2==0.7.0
-aiohttp-session==0.5.0
+aiohttp-session==0.7.0
 cffi==1.5.2
 chardet==2.3.0
-cryptography==1.2.2
+cryptography==1.9
 idna==2.0
 Jinja2==2.8
 MarkupSafe==0.23
 pyasn1==0.1.9
 pycparser==2.14
 six==1.10.0
+aioredis==0.3.3
